# smart-upgrade

./: 2026-03-30_11-25-50.yaml  CLAUDE.md  LICENSE  README.md  SPECIFICATION.md  pyproject.toml
.claude/: settings.local.json
scripts/: smart-upgrade
smart_upgrade/: __init__.py  __main__.py  audit.py  cli.py  config.py  models.py  platform_detect.py  ui.py  whitelist.py
smart_upgrade/adapters/: __init__.py  apt.py  base.py  brew.py  npm.py
smart_upgrade/analysis/: __init__.py  changelog.py  claude_invoker.py  engine.py  threat_intel.py
smart_upgrade/prompts/: layer_a_review.txt  layer_b_threat_intel.txt  layer_c_changelog.txt
tests/: test_analysis_engine.py  test_apt_adapter.py  test_audit.py  test_brew_adapter.py  test_claude_invoker.py  test_cli.py  test_config.py  test_models.py  test_npm_adapter.py  test_platform_detect.py  test_threat_intel.py  test_whitelist.py
tests/fixtures/: apt_list_upgradable.txt  brew_outdated.json  npm_install_dryrun.json  npm_install_dryrun.txt  npm_outdated.json  sample_changelog.txt
